cabal-version:   3.0
name:            resp
version:         1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Owen Shepherd
maintainer:      owen@owen.cafe
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC==9.6.2
               , GHC==9.4.5
               , GHC==9.2.8
               , GHC==9.0.2
               , GHC==8.10.7
               , GHC==8.8.4
               , GHC==8.6.5
               , GHC==8.4.4
               , GHC==8.2.2
               , GHC==8.0.2
               , GHC==7.10.3
               , GHC==7.8.4
               , GHC==7.6.3
               , GHC==7.4.2
               , GHC==7.2.2
               , GHC==7.0.4

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.RESP
    build-depends:    base >=4.3 && <5
                    , bytestring
                    , scanner
                    , text
    hs-source-dirs:   src
    default-language: Haskell98

test-suite resp-test
    import:           warnings
    default-language: Haskell98
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.3 && <5
                    , bytestring
                    , resp
                    , scanner
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , text
